# bash-rust-language

./: Cargo.toml  README.md  script.tsh
.github/workflows/: build.yml  tests.yml
engine-lib/: Cargo.toml
engine-lib/src/: error.rs  lib.rs
engine-lib/src/lexer/: error.rs  mod.rs  tokens.rs
src/: main.rs
tests/: lexing.rs
