[package]
name = "custom-language-rust"
version = "0.1.0"
edition = "2021"

[workspace]

[workspace.dependencies]
# logging
pretty_env_logger = "0.5"
log = "0.4.25"

# utils
thiserror = "2.0.11"
strum = { version = "0.26", features = ["derive"] }
colored = { version = "3.0.0" }

[dependencies]
engine-lib = { path = "engine-lib" }
pretty_env_logger = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
